tests/fixtures/invalid/pow_int_bytes_none.py
# Cannot call pow() with Int, Bytes, None
x = pow(1, b"hello", None)
